# ginger-lib

./: .gitignore  Cargo.toml
algebra/: Cargo.toml
primitives/: Cargo.toml
proof-systems/: Cargo.toml
r1cs/core/: Cargo.toml
r1cs/core/src/: impl_lc.rs
