[package]
name = "algebra"
version = "0.1.0"
authors = [
    "Sean Bowe",
    "Alessandro Chiesa",
    "Matthew Green",
    "Ian Miers",
    "Pratyush Mishra",
    "Howard Wu",
    "Daniele Di Benedetto <daniele@horizenlabs.io>",
    "Marcelo Kaihara <marcelo@horizenlabs.io>",
    "Ulrich Haboeck <ulrich@horizenlabs.io>"
]
description = "A library for finite fields, elliptic curves and FFTs evaluation over prime finite fields"
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"


################################# Dependencies ################################

[dependencies]
byteorder = "=1.3.4"
rand = { version = "0.7.3" }
derivative = "=1.0.4"

colored = { version = "1", optional = true }
rayon = { version = "1", optional = true }
clippy = { version = "*", optional = true }

[dev-dependencies]
blake2 = "0.7"
criterion = "0.2"
rand_xorshift = { version = "0.2" }

[features]
parallel = [ "rayon" ]
fft = ["rayon"]
